<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StarStrat</string>
    <string name="title_activity_main">StarStrat</string>
    <string name="home_welcome">Bienvenue sur StarStrat,\nune application vous permettant de préparer vos BO pour le célébre jeu Starcraft 2.\n\n Auteurs: \n\tBolinhas Christophe\n\tChételat Pierre\n\tBaland Kévin</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Accueil</item>
        <item>Liste de stratégie</item>
        <item>Choix de la vitesse</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_list</item>
        <item>@drawable/ic_settings</item>
    </array>

    <string-array name="races_array">
        <item>Terran</item>
        <item>Protoss</item>
        <item>Zerg</item>
    </string-array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="hello_blank_fragment">Hello home fragment</string>
    <string name="text_hello_exemple">Hello example fragment</string>


    <!-- Values for SpeedChooseFragment -->
    <string name="choose_speed_fragment_title">Choix de la vitesse de jeu</string>
    <string name="choose_speed_fragment_slower">Plus lent</string>
    <string name="choose_speed_fragment_slow">Lent</string>
    <string name="choose_speed_fragment_normal">Normal</string>
    <string name="choose_speed_fragment_fast">Rapide</string>
    <string name="choose_speed_fragment_faster">Plus rapide</string>
    <string name="choose_speed_fragment_return">Retour</string>

    <!-- Values for LaunchGameFragment -->
    <string name="launch_game_fragment_Start">Start</string>
    <string name="launch_game_fragment_Pause">Pause</string>
    <string name="launch_game_fragment_end">Fin</string>

</resources>
