<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical"
android:weightSum="10"
tools:context="hearc.ch.starstrat.SpeedChooseFragment">


<TextView android:id="@+id/textChooseSpeed"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_weight="2"
    android:text="@string/choose_speed_fragment_title"
    android:textColor="@color/fragment_text_1"/>

<RadioGroup android:id="@+id/radioGroupSpeed"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_weight="7"
    android:weightSum="6">

    <RadioButton android:id="@+id/radioSlower"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/choose_speed_fragment_slower"
        android:textColor="@color/fragment_text_1"/>

    <RadioButton android:id="@+id/radioSlow"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/choose_speed_fragment_slow"
        android:textColor="@color/fragment_text_1"/>

    <RadioButton android:id="@+id/radioRegular"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/choose_speed_fragment_normal"
        android:textColor="@color/fragment_text_1"/>

    <RadioButton android:id="@+id/radioFast"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:checked="true"
        android:text="@string/choose_speed_fragment_fast"
        android:textColor="@color/fragment_text_1"/>


    <RadioButton android:id="@+id/radioFaster"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/choose_speed_fragment_faster"
        android:textColor="@color/fragment_text_1"/>

</RadioGroup>

</LinearLayout>
